# hatchery

./: .gitignore  Cargo.toml  README.md
.sxgate/: preview.conf
crates/hatchery-server/: Cargo.toml
crates/hatchery-server/src/: api.rs  live.rs  main.rs  roles.rs  scenario.rs  state.rs  util.rs  viz_model.rs  vocab.rs
crates/hatchery-server/src/ai/: anthropic.rs  mod.rs  tools.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
